--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
     <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
+
+    <br>
+    <br>
+    <form>
+
+    <label>Cuéntanos un poco qué te pareció nuestra página</label> 
+    <textarea name="comentario" id="" cols="30" rows="10" placeholder="Ingrese su comentario"></textarea>
+    <br>
+    <label> <button name="botonComentario"> Enviar</button></label>
+    </form>
     
 </body>
 
