--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
         <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
-    <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
+    <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;<a>
 
     <br>
     <br>
+    
     <form>
-
+        
     <label>Cuéntanos un poco qué te pareció nuestra página</label> 
     <textarea name="comentario" id="" cols="30" rows="10" placeholder="Ingrese su comentario"></textarea>
     <br>
