--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
+    <a href="index.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
 
     
 <br>
