--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Galería de la Tecnología</h1>
+<div class="h"> <h1>Galería de la Tecnología</h1></div>
     <div class="container">
         <img src="img1.jpg" alt="Imagen de la NASA" class="image"/>
         <div class="txt">
