--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Galería de la Tecnología</h1>
+   <div class="h"><h1>Galería de la Tecnología</h1></div> 
     <div class="container">
         <img src="img2.jpg" alt="Sala de servidores" class="image"/>
         <div class="txt">
