--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <form>
 
     <label>Cuéntanos un poco qué te pareció nuestra página</label> 
-    <textarea name="comentario" id="" cols="30" rows="10" placeholder="Ingrese su comentario"></textarea>
+    <textarea name="comentario" id="" cols="30" rows="10" placeholder="Ingrese su comentario" size="10"></textarea>
     <br>
     <label> <button name="botonComentario"> Enviar</button></label>
     </form>
